# Victros-Archive

./: .env.example  .gitignore  README.md  deploy.sh  deployment-guide.md  docker-compose.yml  victros-deploy-skill.md  victros-poc-spec.md  victros-simulator.html
victros-poc/: pyproject.toml  requirements.txt
victros-poc/backend/: Dockerfile
victros-poc/backend/evals/: explanation_eval.json  extraction_eval.json  general_ai_eval.json  intent_router_eval.json
victros-poc/backend/schema/: levers.json  patterns.json  representative_actions.json  sales_zones.json  signals.json  strategy_paths.json
victros-poc/backend/server/: auth.py  config.py  confirmation_gate.py  decision_engine.py  intake_tracker.py  main.py  models.py  pattern_diagnostics.py  progress_evaluator.py  readiness_check.py  schema_store.py  session_manager.py  state_machine.py  version.py
victros-poc/backend/snapshots/: 2026-04-05.json
victros-poc/backend/tests/: conftest.py  test_alignment_checkpoint.py  test_api.py  test_api_e2e_flow.py  test_auth.py  test_auth_enforcement.py  test_config.py  test_confirmation_gate.py  test_data_flow_logic.py  test_decision_engine.py  test_decision_snapshot.py  test_deploy_smoke.py  test_explanation_service.py  test_extraction_service.py  test_frontend_build.py  test_frontend_contract.py  test_general_assist.py  test_intake_loop.py  test_intent_router.py  test_invariants.py  test_llm_client.py  test_med_explicit_items.py  test_models.py  (+18 more)
victros-poc/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+79 files in other folders)
