[project]
name = "victros-poc"
version = "0.1.0"
description = "Victros Strategic Reasoning Schema — POC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "llm: tests that require a live LLM endpoint (deselect with -m 'not llm')",
    "integration: tests that require external services (Cosmos emulator). Run with -m integration",
    "smoke: post-deploy smoke tests against live endpoint (run with -m smoke)",
    "auth: auth enforcement tests against live SWA (run with -m auth)",
]
